[tool.poetry]
name = "amqtt_db"
version = "0.1.5"
description = ""
authors = ["volker <volker.jaenisch@inqbus.de>"]

license = "MIT"
readme = "README.md"
homepage = "https://github.com/volkerjaenisch/amqtt_db"
repository = "https://github.com/volkerjaenisch/amqtt_db"
keywords = ["amqtt", "MQTT", "Persistence", "SQLAlchemy", "Database"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.7"
amqtt = { path = "../amqtt", develop = true}
SQLAlchemy = "^1.4.1"
aiounittest = "^1.4.2"
psycopg2-binary = "^2.9.9"
PyYAML = "^6.0.0"
wrapt = "^1.14.0"
typed-ast = "^1.5.5"
alembic = "^1.13.0"

#sqlalchemy-migrate = "^0.13.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
Sphinx = "^3.5.3"
sphinx-rtd-theme = "^0.5.2"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.plugins."amqtt.broker.plugins"]
amqtt_db = "amqtt_db.plugin:DBPlugin"
